# DataTracks

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  askama.toml  build.rs  default.toml  definitions.toml  engines.toml
.cargo/: config.toml
.github/.workflows/: pr.yml  push.yml
.github/workflows/: doc.yml  pr.yml  push.yml  release.yml  release_simple.yml
app/: .gitignore  Cargo.toml  build.rs
app/benches/: train_overhead.rs
app/src/: lib.rs  main.rs
app/src/algebra/: aggregate.rs  algebra.rs  dual.rs  executor.rs  filter.rs  function.rs  implement.rs  join.rs  mod.rs  operator.rs  order.rs  project.rs  purge.rs  root.rs  scan.rs  set.rs  sort.rs  union.rs  variable.rs  visitor.rs
app/src/algebra/analyse/: mod.rs  purge.rs
app/src/analyse/: analyse.rs  layout.rs  mod.rs  summery.rs
app/src/http/: destination.rs  mod.rs  source.rs  util.rs
app/src/language/: language.rs  mod.rs  statement.rs
app/src/language/mql/: lex.rs  mod.rs  parse.rs  statement.rs  translate.rs
app/src/language/sql/: buffer.rs  lex.rs  mod.rs  parse.rs  statement.rs  translate.rs
app/src/management/: api.rs  buffer.rs  catalog.rs  configuration.rs  definition.rs  defintion.rs  engine.rs  entity.rs  manage.rs  management.rs  mapping.rs  mod.rs  permission.rs  persister.rs  storage.rs
app/src/mongo/: destination.rs  mod.rs  source.rs  util.rs
app/src/mqtt/: broker.rs  destination.rs  mod.rs  source.rs
app/src/optimize/: cost.rs  mod.rs  optimizer.rs  rule.rs
app/src/optimize/rules/: merge.rs  mod.rs
app/src/phases/: mapper.rs  mod.rs  nativer.rs  persister.rs  processer.rs  timer.rs  wal.rs
app/src/postgres/: connection.rs  destination.rs  mod.rs  source.rs  transformer.rs  util.rs
app/src/processing/: block.rs  debug.rs  destination.rs  layout.rs  ledger.rs  mod.rs  optimize.rs  plan.rs  platform.rs  portal.rs  select.rs  sender.rs  source.rs  station.rs  train.rs  transform.rs  watermark.rs  window.rs
app/src/processing/tests/: advertise.rs  mod.rs  plan_test.rs  wordcount.rs
app/src/sql/: mod.rs
app/src/sql/postgres/: connection.rs  mod.rs  transformer.rs
app/src/sql/sqlite/: connection.rs  destination.rs  mod.rs  source.rs  transformer.rs
app/src/sqlite/: connection.rs  destination.rs  source.rs  transformer.rs
app/src/tests/: advertise.rs  mod.rs  plan_test.rs  replay.rs  replication.rs  wordcount.rs
app/src/tpc/: destination.rs  management.rs  mod.rs  server.rs  source.rs
app/src/ui/: configuration.rs  mod.rs  web.rs
app/src/util/: broadcast.rs  builder.rs  channel.rs  dynamic.rs  id.rs  iterator.rs  logo.rs  message.rs  mod.rs  one_shot.rs  reader.rs  reservoir.rs  storage.rs  timeunit.rs  trigger.rs  visitor.rs  window.rs
app/src/util/threading/: broadcast.rs  channel.rs  mod.rs  one_shot.rs  pool.rs
benches/: train_overhead.rs  value_bench.rs
cdc/: Cargo.toml
cdc/src/: lib.rs
cdc/src/mongo/: mod.rs  replication.rs
cdc/src/postgres/: mod.rs  pg_hba.conf  replication.rs
cdc/src/util/: cdc.rs  container.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/models/: configuration.rs  mod.rs  plan.rs
core/src/processing/: configuration.rs  mod.rs  source.rs
core/src/util/: iterator.rs  mod.rs  reservoir.rs  storage.rs
dashboard/: .gitignore  README.md  angular.json  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json
dashboard/src/: styles.css
engine/: Cargo.toml
engine/src/: connection.rs  engine.rs  lib.rs  mongo.rs  monitoring.rs  neo.rs  postgres.rs
error/: Cargo.toml
error/src/: error.rs
flatbuffer/: value.fbs  value_generated.rs
macro/: Cargo.toml
macro/src/: lib.rs
macro/tests/: mod.rs
processing/: Cargo.toml
processing/src/: algebra.rs  expression.rs  instruction.rs  jit.rs  lib.rs  operator.rs  program.rs
processing/src/jit/: builder.rs  mod.rs  value.rs
processing/src/language/: cypher.rs  mod.rs  mql.rs  sql.rs
processing/src/simd/: batch.rs  column.rs  compiler.rs  mod.rs  program.rs  vm.rs
processing/src/tuple/: compiler.rs  mod.rs  program.rs  vm.rs
reactor/: Cargo.toml
reactor/src/: lib.rs
sink/: Cargo.toml
sink/src/: dummy.rs  kafka.rs  lib.rs
src/: lib.rs  main.rs
src/algebra/: aggregate.rs  algebra.rs  dual.rs  filter.rs  function.rs  implement.rs  join.rs  mod.rs  operator.rs  project.rs  scan.rs  set.rs  union.rs  variable.rs
src/analyse/: analyse.rs  layout.rs  mod.rs  summery.rs
src/http/: destination.rs  http.rs  mod.rs  source.rs  util.rs
src/language/: language.rs  mod.rs  statement.rs
src/management/: api.rs  engine.rs  management.rs  mod.rs  storage.rs
src/mangagement/: management.rs  storage.rs
src/mqtt/: broker.rs  destination.rs  mod.rs  source.rs
src/optimize/: cost.rs  effort.rs  mod.rs  optimizer.rs  reward.rs  rule.rs
src/processing/: block.rs  debug.rs  depot.rs  destination.rs  http.rs  layout.rs  mod.rs  option.rs  plan.rs  platform.rs  plattform.rs  puller.rs  receiver.rs  sender.rs  source.rs  station.rs  train.rs  transform.rs  variable.rs  (+2 more)
statistics/: Cargo.toml  build.rs
statistics/src/: lib.rs  manager.rs  tpc.rs  web.rs
tests/: plan_test.rs
threading/: Cargo.toml
threading/src/: broadcast.rs  channel.rs  command.rs  lib.rs  multi.rs  one_shot.rs  pool.rs
ui/: .env.dummy  .env.production  index.html  package.json  pnpm-lock.yaml
util/: Cargo.toml
util/src/: batch.rs  channel.rs  container.rs  context.rs  definition.rs  event.rs  extractor.rs  id.rs  lib.rs  mappings.rs  meta.rs  partition.rs  query.rs  queue.rs  record.rs  runtimes.rs  segment.rs  types.rs
value/: Cargo.toml  build.rs
value/benches/: value_bench.rs
value/capnp/: value.capnp
value/src/: array.rs  bool.rs  conversion.rs  date.rs  dict.rs  edge.rs  event.rs  float.rs  int.rs  lib.rs  map.rs  math.rs  message.rs  node.rs  null.rs  text.rs  time.rs  timeunit.rs  train.rs  type.rs  value.rs  value_generated.rs  wagon.rs
value/src/conversion/: bson.rs  capnp.rs  flatbuffer.rs  json.rs  mqtt.rs  neo4j.rs  postgres.rs  redd.rs  sqlite.rs
web/: package.json  pnpm-lock.yaml
wix/: main.wxs
(+137 files in other folders)
