[workspace]
resolver = "2"
members = ["core", "app", "value", "threading", "macro", "engine", "util", "sink", "statistics"]


[workspace.package]
version = "0.6.0"
edition = "2024"
authors = ["datomo <dave.lengw@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/data-tracks/DataTracks"
description = "DataTracks is an prototype system, which provides easy creation and management of complex data streaming workloads for various degrees of structured and unstructured data."

[workspace.dependencies]
bollard = "0.20.1"
speedy = "0.8.7"
statistics = { path = "./statistics" }
flume = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bytes = "1.11.1"
tracing = "0.1.44"
chrono = "0.4.43"
flatbuffers = "25.12.19"
postgres = { version = "0.19.12" }
tokio-postgres = "0.7.16"
rusqlite = { version = "0.38.0", features = ["bundled"] }
criterion = "0.8.2"
redb = "3.1.0"
rumqttc = "0.25.1"
rumqttd = "0.20.0"
tracing-test = "0.2.6"
tokio = { version = "1.49.0", features = ["full"] }
mongodb = { version = "3.5.1" }
crossbeam = "0.8.4"
value = { path = "./value" }
core = { path = "./core" }
threading = { path = "./threading" }
util = { path = "./util" }
sink = { path = "./sink" }
engine = { path = "engine" }
error = { path = "./error" }
uuid = { version = "1.20.0", features = ["v4"] }
rand = "0.10.0"
parking_lot = "0.12.5"
thiserror = "2.0.18"
neo4rs = "0.9.0-rc.9"
futures = "0.3.31"
derive_more = "2.1.1"
num-format = "0.4.4"
comfy-table = "7.2.2"
memmap2 = "0.9.9"
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["full"] }
anyhow = "1.0.101"
capnp = "0.25"
capnpc = "0.25.0"


# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3    # Maximum optimization level
lto = true       # Enable Link Time Optimization
codegen-units = 1 # Use a single codegen unit for better optimization (slower compile)

[profile.profiling]
inherits = "release"
debug = true

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installer should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false




