[workspace]
resolver = "2"
members = ["app", "value", "macro", "engine", "util", "sink", "statistics", "processing"]


[workspace.package]
version = "0.7.0"
edition = "2024"
authors = ["datomo <dave.lengw@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/data-tracks/DataTracks"
description = "DataTracks is an prototype system, which provides easy creation and management of complex data streaming workloads for various degrees of structured and unstructured data."

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
bollard = "0.20.1"
bytes = "1.11.1"
capnp = "0.25.2"
capnpc = "0.25.0"
chrono = "0.4.44"
comfy-table = "7.2.2"
criterion = "0.8.2"
crossbeam = "0.8.4"
dashmap = { version = "7.0.0-rc2", features = ["serde"] }
derive_more = "2.1.1"
engine = { path = "engine" }
flatbuffers = "25.12.19"
flume = "0.12.0"
futures = "0.3.32"
indexmap = { version = "2.13.0", features = ["serde"] }
lru = "0.16.3"
memmap2 = "0.9.10"
mongodb = { version = "3.5.1" }
neo4rs = "0.9.0-rc.9"
num-format = "0.4.4"
once_cell = "1.21.4"
parking_lot = "0.12.5"
postgres = { version = "0.19.12" }
rand = "0.10.0"
rayon = "1.11.0"
redb = "3.1.1"
rumqttc = "0.25.1"
rumqttd = "0.20.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
sink = { path = "./sink" }
speedy = "0.8.7"
statistics = { path = "./statistics" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-postgres = "0.7.16"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
toml = "1.0.6"
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.44"
tracing-test = "0.2.6"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
util = { path = "./util" }
uuid = { version = "1.22.0", features = ["v4"] }
value = { path = "./value" }
processing = { path = "./processing" }
async-trait = "0.1.89"
enum_dispatch = "0.3.13"
nom = "8.0.0"
json5 = "1.3.1"
ordered-float = { version = "5.1.0", features = ["speedy", "serde"] }


# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3    # Maximum optimization level
lto = true       # Enable Link Time Optimization
codegen-units = 1 # Use a single codegen unit for better optimization (slower compile)

[profile.profiling]
inherits = "release"
debug = true

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installer should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false




