[package]
name = "data-tracks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[package.metadata.wix]
upgrade-guid = "729CD774-9F39-428A-BCD3-0753ED03D697"
path-guid = "85C1D2EE-6595-4038-9183-39CDBDA4E8CC"
license = false
eula = false

[dependencies]
value = { workspace = true }
error = { workspace = true }
core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
flatbuffers = { workspace = true }
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
util = { workspace = true }
engine = { workspace = true }
sink = { workspace = true }
futures = { workspace = true }


[dev-dependencies]

[dependencies.track-rails]
git = "https://github.com/data-tracks/TrackRails.git"
branch = "generated"



