[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tokio-postgres = { workspace = true }
mongodb = { workspace = true }
util = { workspace = true }
bollard = "0.19.4"
futures-util = "0.3.31"
tokio = { workspace = true }
tracing = { workspace = true }
neo4rs = "0.9.0-rc.9"
