[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tokio-postgres = { workspace = true }
mongodb = { workspace = true }
util = { workspace = true }
bollard = "0.19.4"
futures-util = "0.3.31"
tokio = { workspace = true }
tracing = { workspace = true }
neo4rs = "0.9.0-rc.9"
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
value = { workspace = true }
derive_more = { workspace = true }
flume = { workspace = true }
statistics = {workspace = true}
bytes = "1.11.0"
pin-utils = "0.1.0"
log = "0.4.28"
tracing-test = { workspace = true }
