[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tokio-postgres = { workspace = true }
mongodb = { workspace = true }
util = { workspace = true }
futures-util = "0.3.31"
tokio = { workspace = true }
tracing = { workspace = true }
neo4rs = "0.9.0-rc.9"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
value = { workspace = true }
derive_more = { workspace = true }
flume = { workspace = true }
pin-utils = "0.1.0"
tracing-test = { workspace = true }
anyhow = { workspace = true }
