[package]
name = "processing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
value = { workspace = true }
anyhow = { workspace = true }
sqlparser = "0.61.0"
serde = { workspace = true }
util = { workspace = true }