[package]
name = "processing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
value = { workspace = true }
anyhow = { workspace = true }
sqlparser = "0.61.0"
serde = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
nom = { workspace = true }
serde_json = { workspace = true }
mongodb = { workspace = true }
json5 = { workspace = true }
rayon = { workspace = true }
cranelift = { version = "0.130.0", features = [] }
cranelift-module = { version = "0.130.0", features = [] }
cranelift-jit = "0.130.0"
cranelift-native = "0.130.0"
target-lexicon = "0.13.5"
cranelift-codegen = "0.130.0"