[package]
name = "reactor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tokio = { workspace = true }
flume = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1.89"
