[package]
name = "sink"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde_json = "1.0.145"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
serde = { version = "1.0.228", features = ["derive"] }
util = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
value = { workspace = true }
rand = { workspace = true }
crossbeam = { workspace = true }
flume = { workspace = true }
