[package]
name = "threading"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
crossbeam = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
value = { workspace = true }
error = {workspace = true}