[package]
name = "util"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
bollard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3.31"
value = { workspace = true }
memmap2 = { workspace = true }
speedy = { workspace = true }
chrono = { workspace = true }
flume = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
anyhow = { workspace = true }
num-format = { workspace = true }