[package]
name = "value"
version = "0.1.0"
edition = "2024"

[dependencies.track-rails]
git = "https://github.com/data-tracks/TrackRails.git"
branch = "generated"

[dependencies]
speedy = { workspace = true }
serde = { workspace = true }
flatbuffers = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
json = "0.12.4"
bytes = "1.10.0"
postgres = { workspace = true }
rusqlite = { workspace = true }
rumqttc = "0.24.0"
rumqttd = "0.19.0"
redb = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "value_bench"
harness = false