[package]
name = "value"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies.track-rails]
git = "https://github.com/data-tracks/TrackRails.git"
branch = "generated"

[dependencies]
speedy = { workspace = true }
serde = { workspace = true }
flatbuffers = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
json = "0.12.4"
bytes = { workspace = true }
postgres = { workspace = true }
rusqlite = { workspace = true }
rumqttc = "0.24.0"
rumqttd = "0.19.0"
redb = { workspace = true }
criterion = { workspace = true }
mongodb = { workspace = true }
neo4rs = { workspace = true }

[[bench]]
name = "value_bench"
harness = false