[package]
name = "value"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
speedy = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
json = "0.12.4"
bytes = { workspace = true }
postgres = { workspace = true }
rusqlite = { workspace = true }
rumqttc = "0.25.1"
rumqttd = "0.20.0"
redb = { workspace = true }
criterion = { workspace = true }
mongodb = { workspace = true }
neo4rs = { workspace = true }
anyhow = { workspace = true }
capnp = { workspace = true }
flatbuffers = {workspace = true}

[build-dependencies]
capnpc = { workspace = true }

[[bench]]
name = "value_bench"
harness = false